@@ -9,22 +9,16 @@ import com.openclassrooms.springsecurityauth.repository.RentalRepository;
 import com.openclassrooms.springsecurityauth.service.ImageService;
 import com.openclassrooms.springsecurityauth.service.RentalService;
 import com.openclassrooms.springsecurityauth.service.UserService;
-
 import io.swagger.v3.oas.annotations.security.SecurityRequirement;
-
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
 
-import java.io.IOException;
-import java.util.HashMap;
 import java.io.File;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
+import java.io.IOException;
+import java.util.*;
 
 @RestController
 @RequestMapping("/rentals")
@@ -40,11 +34,11 @@ public class RentalController {
 
     @PostMapping(consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
     public ResponseEntity<RentalDTO> createRental(
-            @ModelAttribute RentalCreateDTO rentalCreateDTO,
-            @RequestParam("picture") MultipartFile pictureFile) throws IOException {
+            @RequestPart RentalCreateDTO rentalCreateDTO,
+            @RequestPart("picture") MultipartFile pictureFile
+    ) throws IOException {
 
         User currentUser = userService.getCurrentUser();
-
         String imageUrl = imageService.saveImage(pictureFile);
 
         Rental rental = rentalMapper.rentalCreateDTOToRental(rentalCreateDTO);
@@ -52,8 +46,7 @@ public class RentalController {
         rental.setOwner(currentUser);
 
         Rental savedRental = rentalRepository.save(rental);
-
-        RentalDTO responseDto = rentalMapper.rentalToRentalDTO(savedRental);
+        RentalDTO responseDto = rentalMapper.rentalToRentalDTOWithBase64(savedRental);
         return ResponseEntity.ok(responseDto);
     }
 
@@ -61,31 +54,30 @@ public class RentalController {
     public ResponseEntity<Map<String, List<RentalDTO>>> getAllRentals() {
         List<Rental> rentals = rentalService.getAllRentals();
         List<RentalDTO> dtos = rentals.stream()
-                .map(rentalMapper::rentalToRentalDTO)
-                .collect(Collectors.toList());
+                .map(rentalMapper::rentalToRentalDTOWithBase64)
+                .toList();
 
         Map<String, List<RentalDTO>> response = new HashMap<>();
-        response.put("rentals", dtos); // clé attendue par le front
+        response.put("rentals", dtos);
         return ResponseEntity.ok(response);
     }
 
     @GetMapping("/{id}")
     public ResponseEntity<RentalDTO> getRental(@PathVariable Long id) {
         return rentalService.getRental(id)
-                .map(rental -> ResponseEntity.ok(rentalMapper.rentalToRentalDTO(rental)))
+                .map(rental -> ResponseEntity.ok(rentalMapper.rentalToRentalDTOWithBase64(rental)))
                 .orElseGet(() -> ResponseEntity.notFound().build());
+    }
+
+    @DeleteMapping("/{id}")
+    public ResponseEntity<Void> deleteRental(@PathVariable Long id) {
+        rentalService.deleteRental(id);
+        return ResponseEntity.noContent().build();
     }
 
     @GetMapping("/test-images")
     public List<String> testImages() {
-        File folder = new File("/var/uploads/images/");
-        return folder.exists() ? Arrays.asList(folder.list()) : List.of("Dossier introuvable");
+        File folder = new File("/home/edouard/uploads/images/");
+        return folder.exists() ? Arrays.asList(Objects.requireNonNull(folder.list())) : List.of("Dossier introuvable");
     }
-
-    @DeleteMapping("/{id}")
-public ResponseEntity<Void> deleteRental(@PathVariable Long id) {
-    rentalService.deleteRental(id);
-    return ResponseEntity.noContent().build();
-}
-
 }
